syntax = "proto3";
package climate_data_service.v1;
option go_package = "github.com/hikata101/climate_data_service/v1";

import "climate_data.proto";

service Dataset {
  // Fan-out to multiple providers and stream back results in arrival order.
  rpc DownloadDataset (DownloadDatasetRequest) returns (stream DownloadDatasetResponse);
  rpc UploadDataset(stream UploadChunk) returns (UploadResponse);
  rpc ListDatasets(ListDatasetsRequest) returns (stream DownloadDatasetResponse);
}

enum ProvidersKind {
  PROVIDER_KIND_UNKNOWN = 0;
  PROVIDER_KIND_OPEN_METEO = 1;
}

message DownloadDatasetRequest {
  ProvidersKind provider = 1; // may be deprecated in future
  oneof request {
    OpenMeteoRequest open_meteo = 2;
  }
}
message DownloadDatasetResponse {
  int32 status = 1;
  oneof Response {
    OpenMeteoDataset open_meteo_dataset = 2;
  }
}

// Open-Meteo API request message
message OpenMeteoRequest {
  float latitude = 1;        // Latitude in decimal degrees
  float longitude = 2;       // Longitude in decimal degrees
  repeated climate_data.Hourly hourly = 4; // Hourly weather variables (e.g., "temperature_2m", "relative_humidity_2m")
  float elevation = 5;      // Elevation in meters
  repeated climate_data.Daily daily = 6;  // Daily weather variables (e.g., "temperature_2m_max", "precipitation_sum")
  bool current_weather = 7; // Include current weather data
  // TemperatureUnit temperature_unit = 8; // Temperature unit ("celsius" or "fahrenheit")
  // WindSpeedUnit wind_speed_unit = 9; // Wind speed unit ("kmh", "ms", "mph", "kn")
  // PrecipitationUnit precipitation_unit = 10; // Precipitation unit ("mm" or "inch")
  // TimeFormat time_format = 11; // Time format ("iso8601" or "unixtime")
  // TImezone timezone =12;        // Timezone (e.g., "auto", "Europe/Berlin", "UTC")
  // PastDays past_days = 13;      // Number of past days to include
  // ForecastDays forecast_days = 14; // Number of forecast days to include
  string start_date = 15;      // Start date in YYYY-MM-DD format
  string end_date = 16;        // End date in YYYY-MM-DD format
  repeated string models= 17; // Weather models to use (e.g., "gfs", "icon", "ecmwf")
  string cell_selection = 18;  // Cell selection (e.g., "auto", "Europe/Berlin", "UTC")
  int32 timeout_ms = 19;       // Request timeout in milliseconds
}



// Option B: compact, enum-driven message (mirrors the hourly pattern).
// Use this if you prefer a single field for any daily variable plus an explicit enum.
message OpenMeteoDailyResponse {
  climate_data.Daily daily = 1;       // which daily variable this message contains
  string unit = 2;       // unit name for the data (e.g., "mm", "Â°C", "hours", ...)
  repeated float data = 3; // the values (one per day)
}


message OpenMeteoHourlyResponse {
  climate_data.Hourly hourly = 1;
  string unit = 2;
  repeated float data = 3;
}

message OpenMeteoDataset{
  int32 status = 1;
  float latitude = 2;
  float longitude = 3;
  float generationtime_ms = 4;
  int32 utc_offset_seconds = 5;
  string timezone = 6;
  string timezone_abbreviation = 7;
  float elevation = 8;
  climate_data.OpenMeteoCurrentWeatherUnits current_weather_units = 9;
  climate_data.OpenMeteoCurrentWeather current_weather = 10;
  climate_data.OpenMeteoHourlyUnits hourly_units = 11;
  climate_data.OpenMeteoHourly hourly = 12;
}

message ProviderResult {
  ProvidersKind provider = 1;
  int32 status = 2;
  string body = 3; // JSON string for simplicity
}

enum DatasetFormat {
  DATASET_FORMAT_UNKNOWN = 0;
  DATASET_FORMAT_CSV     = 1;
  DATASET_FORMAT_NETCDF  = 2;
  DATASET_FORMAT_JSON    = 3;
}

message DatasetMeta {
  string id = 1;         // server-assigned (UUID)
  string name = 2;       // client-provided filename/logical name
  DatasetFormat format = 3;
  int64 size_bytes = 4;
  string path = 5;       // server-side storage path (opaque for client)
  string created_at = 6; // RFC3339
}

// Client-streaming upload (chunked)
message UploadChunk {
  oneof body {
    DatasetMeta meta = 1;   // MUST be sent first
    bytes chunk = 2;        // raw bytes (arbitrary size chunks)
  }
}

message UploadResponse { DatasetMeta meta = 1; }

message ListDatasetsRequest {
  ProvidersKind provider = 1; // may be deprecated in future
  oneof request {
    OpenMeteoRequests open_meteo = 2;
  }
}

// Open-Meteo API request message
message Location {
  float latitude = 1;        // Latitude in decimal degrees
  float longitude = 2;       // Longitude in decimal degrees
}

message OpenMeteoRequests {
  repeated Location locations = 1;      // Location (latitude and longitude)
  repeated climate_data.Hourly hourly = 2; // Hourly weather variables (e.g., "temperature_2m", "relative_humidity_2m")
  float elevation = 3;      // Elevation in meters
  repeated climate_data.Daily daily = 4;  // Daily weather variables (e.g., "temperature_2m_max", "precipitation_sum")
  bool current_weather = 5; // Include current weather data
  // TemperatureUnit temperature_unit = 6; // Temperature unit ("celsius" or "fahrenheit")
  // WindSpeedUnit wind_speed_unit = 7; // Wind speed unit ("kmh", "ms", "mph", "kn")
  // PrecipitationUnit precipitation_unit = 8; // Precipitation unit ("mm" or "inch")
  // TimeFormat time_format = 9; // Time format ("iso8601" or "unixtime")
  // TImezone timezone =10;        // Timezone (e.g., "auto", "Europe/Berlin", "UTC")
  // PastDays past_days = 11;      // Number of past days to include
  // ForecastDays forecast_days = 12; // Number of forecast days to include
  string start_date = 13;      // Start date in YYYY-MM-DD format
  string end_date = 14;        // End date in YYYY-MM-DD format
  repeated string models= 15; // Weather models to use (e.g., "gfs", "icon", "ecmwf")
  string cell_selection = 16;  // Cell selection (e.g., "auto", "Europe/Berlin", "UTC")
  int32 timeout_ms = 17;       // Request timeout in milliseconds
}

message ListDatasetsResponse { repeated DatasetMeta items = 1; }
